--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <form class="form">
         <!-- Francisco & Martinez -->
       <p class="title">Registration</p>
-      <p class="message">Register to access our site.</p>
-      <div class="flex">
+
+      <div class="name">
         <label>
           <input required="" placeholder="FIRSTNAME" type="text" class="input" />
           
